--- a/index.html
+++ b/index.html
@@ -1,22 +1,1 @@
-    ....       ....      
-........   ....          
-.......                  
-.......                  
- ..;c;...                
-....,;. .                
-' .......,clloc;..       
-,. .  .;ookOOOkoll;      
-,'  . :ll,lOOOx'':l      
-......:occokkxxxocl'',,,'
-......'lloddkxxdl:c;:::::
-.......,coooc:::c:c::;;;:
-''''...'odxl;,''c;llc:;;.
-''.....,dxxol::clcolc:;;.
-'......;dxxxxxxxxddolc:'.
-..  ...'odxxxddxdddodoo:.
-.    ...loooolccccloool'.
-. ....,lll:'.:;::clol,...
-....,loooc...:llool;.....
-..,lllc;'......',,'......
-;ccc;'...................
-ll:......................
+Hello
